# dentaflow

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  app.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0424a765c412_create_patients_and_appointments.py
alembic1/: env.py
alembic1/versions/: f2b1f45511b1_create_patients_and_appointments_tables.py
app/: main.py
app/core/: __init__.py  config.py  logger.py
app/db/: __init__.py  db.py
app/llm/: __init__.py  clients.py
app/llm/prompts/: classify_v1.txt  respond_v1.txt
app/models/: __init__.py  appointments.py  messages.py  patients.py
app/routes/: __init__.py  appointments.py
app/schemas/: __init__.py  llm.py  webhook.py
app/services/: __init__.py  llm_service.py  patient_service.py  scheduler.py
