[project]
name = "DentaFlow"
version = "0.1.0"
description = "For Appointments"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "langchain>=1.2.17",
    "langchain-core>=1.3.3",
    "langchain-mistralai>=1.1.4",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "python-json-logger>=4.1.0",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]
